syntax = "proto3";

package tools;

option go_package = "./pb";

// 邮件发送请求
message SendEmailReq {
  // 收件人列表（必填）
  repeated string to = 1;
  // 抄送列表（可选）
  repeated string cc = 2;
  // 密送列表（可选）
  repeated string bcc = 3;
  // 邮件主题（必填）
  string subject = 4;
  // 邮件正文内容（必填）
  string content = 5;
  // 内容类型，如 "text/plain" 或 "text/html"（可选，默认为 text/plain）
  string content_type = 6;
  // 发件人邮箱（可选，通常由系统配置）
  string from = 7;
  // 发件人显示名称（可选）
  string from_name = 8;
  // 回复邮箱（可选）
  string reply_to = 9;
  // 邮件优先级：1-高，3-普通，5-低（可选）
  int32 priority = 10;
  // 附件列表（可选）
  repeated EmailAttachment attachments = 11;
}

// 邮件附件结构
message EmailAttachment {
  // 附件文件名
  string file_name = 1;
  // 附件内容（Base64编码）
  string content = 2;
  // 附件MIME类型
  string content_type = 3;
  // 附件大小（字节）
  int64 size = 4;
}

// 邮件发送响应
message SendEmailResp {
  // 响应状态码
  int64 code = 1;
  // 响应消息
  string message = 2;
  // 邮件ID（发送成功时返回）
  string email_id = 3;
  // 发送时间戳
  int64 send_time = 4;
}

// 邮件服务定义
service EmailService {
  // 发送邮件
  rpc SendEmail(SendEmailReq) returns (SendEmailResp);
}
